tests/snapshots/codegen_snapshot_tests__imports.snap
---
source: tests/codegen_snapshot_tests.rs
expression: rust_code
---
// Generated by the Incan compiler v<INCAN_VERSION>

#![allow(unused_imports, dead_code, unused_variables)]

// __INCAN_INSERT_MODS__

use incan_stdlib::prelude::*;
use incan_derive::{FieldInfo, IncanClass};
use std::collections::HashMap;
use std::vec::Vec;
pub fn test_basic_rust_imports() {
    "Test basic Rust stdlib imports generate proper use statements";
    println!("{}", "basic imports work");
}
use std::collections::HashMap as Map;
use std::fs::File as FileHandle;
pub fn test_aliased_imports() {
    "Test imports with aliases generate use statements with 'as'";
    println!("{}", "aliased imports work");
}
use std::path::PathBuf;
use std::io::Result;
pub fn test_nested_imports() {
    "Test nested module path imports";
    println!("{}", "nested imports work");
}
